# subjunctive_practice

./: .env  .env.docker  .env.example  .env.production  .env.production.template  .gitignore  .mcp.json  ACCESSIBILITY_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPLETE_TEST_RESOLUTION.md  DEPLOYMENT_SUMMARY.md  DEVOPS_SPRINT_REPORT.md  Dockerfile  Dockerfile.bak  FINAL_SPRINT_REPORT.md  FINAL_SUCCESS_REPORT.md  FINAL_TEST_RESOLUTION_REPORT.md  LICENSE  PLAN_A_STATUS.md  PROGRESS_INDICATORS_SUMMARY.md  QUICK_START.md  READABILITY_ANALYSIS_SUMMARY.md  READABILITY_IMPLEMENTATION_COMPLETE.md  README-CICD.md  README.md  SpanishSubjunctive.spec  TEST_COMPLETION_SUMMARY.md  WORKING.md  advanced_error_analysis.py  build.py  conjugation_reference.py  detailed_qa_report.json  enhanced_feedback_system.py  learning_analytics.py  main.py  main_enhanced.py  package-lock.json  pyproject.toml  pytest.ini  (+11 more)
.claude/: settings.local.json
.github/: CI-CD-FILES.txt  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.hive-mind/: config.json  hive.db
.swarm/: memory.db
api/: __init__.py
backend/: .coveragerc  .dockerignore  .env.example  .env.production.template  .pre-commit-config.yaml  DEVOPS_SPRINT_REPORT.md  Dockerfile  Makefile  __init__.py  alembic.ini  docker-compose.yml  export_exercises_to_json.py  main.py  pyproject.toml  pytest.ini  railway.json  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  subjunctive_practice.db  test_api_endpoints.py
backend/.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
backend/.github/workflows/: dependency-review.yml  test.yml
backend/alembic/: README  env.py
backend/alembic/versions/: a9b4c5d6e7f8_add_leaderboard_tables.py  add_ai_usage_tracking.py  dbd337efd07e_initial_migration.py  e7f2a9c8b1d4_add_tags_to_exercises.py
backend/api/: __init__.py  custom_exercise_validation.py
backend/api/routes/: achievements.py  admin.py  auth.py  exercises.py  leaderboard.py  progress.py  settings.py
backend/core/: __init__.py  comprehensive_seed_data.py  config.py  database.py  logging_config.py  middleware.py  security.py  seed_data.py  seed_database.py
backend/docs/: EMAIL_IMPLEMENTATION_SUMMARY.md  EMAIL_NOTIFICATION_SYSTEM.md  EMAIL_SETUP_GUIDE.md  SETTINGS_IMPLEMENTATION_SUMMARY.md  TESTING_WORKFLOW.md  TEST_ANALYSIS_SPRINT_REPORT.md  ai_service_usage.md
backend/docs/api/: SETTINGS_API.md
backend/examples/: ai_service_demo.py
backend/models/: __init__.py  ai_usage.py  exercise.py  leaderboard.py  progress.py  schemas.py  settings.py  user.py
backend/schemas/: __init__.py  exercise.py  leaderboard.py  progress.py  user.py
backend/scripts/: init-db.sql  seed_achievements.py
backend/services/: __init__.py  ai_service.py  ai_usage_tracker.py  cache_service.py  conjugation.py  email_service.py  exercise_generator.py  feedback.py  gamification.py  leaderboard_service.py  learning_algorithm.py  notification_scheduler.py
backend/templates/emails/: achievement_unlocked.html  achievement_unlocked.txt  password_reset.html  password_reset.txt  streak_reminder.html  streak_reminder.txt  weekly_summary.html  weekly_summary.txt  welcome.html  welcome.txt
backend/tests/: AI_MOCKING_IMPLEMENTATION.md  AI_MOCK_USAGE.md  README.md  TAG_TEST_ANALYSIS.md  TEST_SUMMARY.md  conftest.py  run_tests.py  test_achievements_api.py  test_ai_usage_tracker.py
backend/tests/api/: test_auth_api.py  test_exercises_api.py  test_progress_api.py
backend/tests/fixtures/: ai_mocks.py
backend/tests/integration/: __init__.py  test_achievement_flow.py  test_achievement_unlock_flow.py  test_ai_feedback_flow.py  test_custom_exercise_flow.py  test_exercise_practice_flow.py  test_learning_progress_flow.py  test_spaced_repetition_flow.py  test_user_registration_flow.py
backend/tests/services/: __init__.py  test_ai_service.py  test_cache_service.py  test_email_service.py  test_gamification.py  test_notification_scheduler.py
backend/tests/test_routes/: test_settings.py
backend/tests/unit/: test_conjugation.py  test_exercise_generator.py  test_feedback.py  test_learning_algorithm.py  test_security.py
backend/user_data/: attempts_user_7_testuser_1759885562.json  fallback_exercises.json  streaks.json  users.json
backend/utils/: __init__.py  helpers.py  spanish_grammar.py
config/: accessibility_settings.json
core/: __init__.py  config.py  middleware.py  security.py  seed_data.py  seed_database.py
daily_dev_startup_reports/: 2025-10-07.md  2025-10-10_startup_report.md  2025-10-11_tech_debt_sprint.md  2025-10-17_comprehensive_startup.md  2025-10-17_daily_report.md  2025-10-17_updated_comprehensive_startup.md  2025-11-18_comprehensive_startup_report.md
daily_reports/: 2025-10-02.md  (+12 more)
(+816 files in other folders)
