[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "subjunctive-practice-gui"
version = "0.1.0"
description = "A PyQt5-based GUI application for practicing the various uses and triggers of the Spanish subjunctive using GPT-powered exercises."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.0.0"
python-dotenv = "^0.21.0"
PyQt5 = "^5.15.0"

# Additional dependencies for enhanced API configuration
dataclasses-json = "^0.5.7"  # For structured configuration
typing-extensions = "^4.0.0"  # For enhanced type hints

[tool.poetry.dev-dependencies]
pytest = "^7.0"
